13_gateway/13.2/vs-frontend-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-route
spec:
  gateways:
  - istio-system/weather-gateway
  hosts:
  - www.weather.cn
  http:
  - route:
    - destination:
        host: frontend
        subset: v1
